# el-game-real

./: .gitignore  CMakeLists.txt  README.md  run.bat
game/: AssetManager.cpp  AssetManager.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SpriteBatch.cpp  SpriteBatch.h  Texture.cpp  Texture.h  Window.cpp  Window.h  event.cpp  event.hpp  fwd.h  game.cpp  game.hpp  utils.hpp
run/: assets.json
run/meshs/: quad.json  screen.json
run/shaders/: font.shader.json  main.frag.glsl  main.shader.json  main.vert.glsl  screen.shader.json
run/shaders/src/: font.frag.glsl  font.vert.glsl  main.vert.glsl  screen.frag.glsl  screen.vert.glsl
